--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "react-scripts": "3.2.0"
   },
   "dependencies": {
+    "antd": "^3.25.0",
+    "babel-plugin-import": "^1.12.2",
+    "customize-cra": "^0.8.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-app-rewired": "^2.1.4",
     "react-dom": "^16.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
