--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.4",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
