--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "babel-plugin-import": "^1.12.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "customize-cra": "^0.8.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.17.0",
+    "jsonwebtoken": "^8.5.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "mongoose": "^5.7.8",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.4",
@@ -32,8 +39,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "server": "cd server && node server.js",
-    "heroku-postbuild": "npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "server": "cd server && node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
