--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.8",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
