--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "body-parser": "^1.19.0",
+    "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "customize-cra": "^0.8.0",
