--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
+    "crc": "^3.8.0",
     "crypto": "^1.0.1",
     "customize-cra": "^0.8.0",
     "express": "^4.17.1",
