--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "crc": "^3.8.0",
     "crypto": "^1.0.1",
     "customize-cra": "^0.8.0",
+    "d3": "^5.14.2",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.0",
+    "graph-js": "^0.1.11",
     "jsonwebtoken": "^8.5.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
@@ -29,6 +31,7 @@
     "path": "^0.12.7",
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.4",
+    "react-d3-graph": "^2.3.0",
     "react-dom": "^16.11.0",
     "react-dotdotdot": "^1.3.1",
     "react-redux": "^7.1.3",
